# ICE-randomizer

./: Cargo.toml  README.md
src/: ice_randomizer.rs  lib.rs
tests/: consts.rs  lib.rs  structs.rs
